# kaggle-commonlit-readability-prize

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: baseline.json
scripts/: prepare_dataset.py
serving/: .env.example  api.py  gradio_ui.py  locustfile.py  predictor.py  requirements.txt
src/: configs.py  data.py  train.py  utils.py
